k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: impulsa-prod
  labels:
    app.kubernetes.io/managed-by: kustomize
