k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: impulsa-dev
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: impulsa-prod
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: prod
